<?xml version="1.0"?>
<package format="2">
  <name>testbed_msgs</name>
  <version>0.0.0</version>
  <description>The testbed_msgs package</description>
  <maintainer email="flip@todo.todo">flip</maintainer>
  <license>GPL</license>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
